# GenshinScheduleOffline

./: .gitignore  README-zh_CN.md  README.md  index.html  package.json
.github/workflows/: release.yml
original/sync/Migrations/: SyncDbContextModelSnapshot.cs
script/map/: merge.py  splitTiles.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: index.ts
src/components/: AutoSizeInput.tsx  Background.tsx  ChangelogModal.tsx  ClockOffsetWarning.tsx  ColorModeOverride.tsx  ConfigProvider.tsx  DropLabel.tsx  Footer.tsx  Header.tsx  Layout.tsx  ShortcutHelp.tsx  TaskSearchModal.tsx  WhiteCard.tsx
src/components/Customize/: IconImage.tsx  Search.tsx
src/components/Home/: WidgetWrapper.tsx
src/components/Map/: RegionLabelLayer.tsx  TileLayer.tsx  index.tsx
src/components/MapPage/: SearchButton.tsx  TaskListOverlay.tsx
src/components/Statistics/: InfoText.tsx  ResetButton.tsx  ResinStats.tsx  TaskStats.tsx
src/components/TaskListCard/: DoneButton.tsx  HideButton.tsx  Item.tsx  index.tsx
src/db/: README.md  characterMaterials.ts  characters.ts  commonMaterials.ts  domainCategories.ts  domainDropSets.ts  domains.ts  icons.ts  map.ts  realms.ts  regions.ts  resins.ts  talentMaterials.ts  weaponMaterials.ts  weapons.ts
src/langs/: README.md  en_US.json  en_US.pot  extract.cjs  generate.cjs  id.json  id.po  it.po  nb_NO.json  nb_NO.po  ru.json  ru.po  zh_Hans.json  zh_Hans.po
src/utils/: config.ts  mapPositionUtils.ts  multiMap.ts  render.tsx  resin.ts  tasks.ts  time.tsx
(+77 files in other folders)
