[package]
name = "genshin-schedule-offline"
version = "0.1.0"
description = "A tool to help you keep track of time-related game activities in Genshin Impact."
authors = ["phos", "Golden_Water", "Contributors on Github"]
license = "MIT"
repository = "https://github.com/BillGoldenWater/GenshinScheduleOffline"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
tauri = { version = "1.1.1", features = ["fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file"] }
tokio = { version = "1.21.1", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
